--- a/07 Spatial Techniques/03 FieldData/GIS.ipynb
+++ b/07 Spatial Techniques/03 FieldData/GIS.ipynb
@@ -41,9 +41,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LUNA\\AppData\\Local\\Temp\\ipykernel_11220\\2458029604.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\LUNA\\AppData\\Local\\Temp\\ipykernel_6776\\2458029604.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method = 'ffill', inplace = True)\n",
-      "C:\\Users\\LUNA\\AppData\\Local\\Temp\\ipykernel_11220\\2458029604.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['Area' 'Area' 'Area' ... 'Trees' 'Trees' 'Trees']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\LUNA\\AppData\\Local\\Temp\\ipykernel_6776\\2458029604.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['Area' 'Area' 'Area' ... 'Trees' 'Trees' 'Trees']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df[\"desc\"].fillna(df['name'], inplace = True)\n"
      ]
     }
@@ -59,140 +59,19 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>altitude (m)</th>\n",
-       "      <th>desc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.100108692</td>\n",
-       "      <td>37.012773786</td>\n",
-       "      <td>1521.2</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.099980347</td>\n",
-       "      <td>37.013731104</td>\n",
-       "      <td>1522.5</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.098893409</td>\n",
-       "      <td>37.013679704</td>\n",
-       "      <td>1522.7</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-1.098296925</td>\n",
-       "      <td>37.013653718</td>\n",
-       "      <td>1523.2</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-1.098277510</td>\n",
-       "      <td>37.012825036</td>\n",
-       "      <td>1522.2</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-1.098359120</td>\n",
-       "      <td>37.012338111</td>\n",
-       "      <td>1520.8</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>-1.098575147</td>\n",
-       "      <td>37.011742448</td>\n",
-       "      <td>1520.1</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>-1.100108692</td>\n",
-       "      <td>37.012773786</td>\n",
-       "      <td>1521.2</td>\n",
-       "      <td>Area</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-1.098860257</td>\n",
-       "      <td>37.012802983</td>\n",
-       "      <td>1521.6</td>\n",
-       "      <td>Building</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>-1.098835477</td>\n",
-       "      <td>37.013408132</td>\n",
-       "      <td>1522.8</td>\n",
-       "      <td>Building</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       latitude     longitude altitude (m)      desc\n",
-       "0  -1.100108692  37.012773786       1521.2      Area\n",
-       "1  -1.099980347  37.013731104       1522.5      Area\n",
-       "2  -1.098893409  37.013679704       1522.7      Area\n",
-       "3  -1.098296925  37.013653718       1523.2      Area\n",
-       "4  -1.098277510  37.012825036       1522.2      Area\n",
-       "5  -1.098359120  37.012338111       1520.8      Area\n",
-       "6  -1.098575147  37.011742448       1520.1      Area\n",
-       "7  -1.100108692  37.012773786       1521.2      Area\n",
-       "8  -1.098860257  37.012802983       1521.6  Building\n",
-       "9  -1.098835477  37.013408132       1522.8  Building"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in df.columns:\n",
     "    if df[col].nunique() <= 2:\n",
     "        df.drop(columns = [col], inplace = True)\n",
     "\n",
     "df.drop(columns = ['color', 'name'], inplace = True)\n",
-    "df.head(10)"
+    "# df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -228,90 +107,90 @@
        "      <td>1</td>\n",
        "      <td>1521.2</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01277 -1.10011)</td>\n",
+       "      <td>POINT (278867.357 9878331.137)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>1522.5</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01373 -1.09998)</td>\n",
+       "      <td>POINT (278973.918 9878345.402)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>1522.7</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01368 -1.09889)</td>\n",
+       "      <td>POINT (278968.116 9878465.611)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>1523.2</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01365 -1.09830)</td>\n",
+       "      <td>POINT (278965.180 9878531.578)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>1522.2</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01283 -1.09828)</td>\n",
+       "      <td>POINT (278872.928 9878533.664)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6</td>\n",
        "      <td>1520.8</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01234 -1.09836)</td>\n",
+       "      <td>POINT (278818.728 9878524.602)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7</td>\n",
        "      <td>1520.1</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01174 -1.09858)</td>\n",
+       "      <td>POINT (278752.434 9878500.666)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>8</td>\n",
        "      <td>1521.2</td>\n",
        "      <td>Area</td>\n",
-       "      <td>POINT (37.01277 -1.10011)</td>\n",
+       "      <td>POINT (278867.357 9878331.137)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9</td>\n",
        "      <td>1521.6</td>\n",
        "      <td>Building</td>\n",
-       "      <td>POINT (37.01280 -1.09886)</td>\n",
+       "      <td>POINT (278870.516 9878469.212)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>10</td>\n",
        "      <td>1522.8</td>\n",
        "      <td>Building</td>\n",
-       "      <td>POINT (37.01341 -1.09884)</td>\n",
+       "      <td>POINT (278937.880 9878471.998)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   fid altitude (m)      desc                   geometry\n",
-       "0    1       1521.2      Area  POINT (37.01277 -1.10011)\n",
-       "1    2       1522.5      Area  POINT (37.01373 -1.09998)\n",
-       "2    3       1522.7      Area  POINT (37.01368 -1.09889)\n",
-       "3    4       1523.2      Area  POINT (37.01365 -1.09830)\n",
-       "4    5       1522.2      Area  POINT (37.01283 -1.09828)\n",
-       "5    6       1520.8      Area  POINT (37.01234 -1.09836)\n",
-       "6    7       1520.1      Area  POINT (37.01174 -1.09858)\n",
-       "7    8       1521.2      Area  POINT (37.01277 -1.10011)\n",
-       "8    9       1521.6  Building  POINT (37.01280 -1.09886)\n",
-       "9   10       1522.8  Building  POINT (37.01341 -1.09884)"
+       "   fid altitude (m)      desc                        geometry\n",
+       "0    1       1521.2      Area  POINT (278867.357 9878331.137)\n",
+       "1    2       1522.5      Area  POINT (278973.918 9878345.402)\n",
+       "2    3       1522.7      Area  POINT (278968.116 9878465.611)\n",
+       "3    4       1523.2      Area  POINT (278965.180 9878531.578)\n",
+       "4    5       1522.2      Area  POINT (278872.928 9878533.664)\n",
+       "5    6       1520.8      Area  POINT (278818.728 9878524.602)\n",
+       "6    7       1520.1      Area  POINT (278752.434 9878500.666)\n",
+       "7    8       1521.2      Area  POINT (278867.357 9878331.137)\n",
+       "8    9       1521.6  Building  POINT (278870.516 9878469.212)\n",
+       "9   10       1522.8  Building  POINT (278937.880 9878471.998)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,6 +198,7 @@
    "source": [
     "gdf = gpd.GeoDataFrame(data = df, crs = \"EPSG:4326\", geometry = gpd.points_from_xy(df.longitude, df.latitude)) # type: ignore\n",
     "gdf.drop(columns = [\"longitude\", \"latitude\"], inplace = True)\n",
+    "gdf = gdf.to_crs(\"EPSG:32737\")\n",
     "\n",
     "gdf['fid'] = gdf.index + 1\n",
     "fid = gdf.pop('fid')\n",
@@ -328,21 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = -1382256.37087345\n",
-    "b = 1.00479613446328\n",
-    "c = 0.139791893088955\n",
-    "d = 1511719.78927612\n",
-    "e = -0.0218098151381128\n",
-    "f = 0.847560128597252"
+    "e = 1618010.606367111\n",
+    "f = -1741978.211608887\n",
+    "\n",
+    "a = 0.9916765364496314\n",
+    "d = 1.175648448821448\n",
+    "\n",
+    "b = -0.1635616585599564\n",
+    "c = 0.02551828620198648"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -372,63 +254,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>POINT (-51161143.49659 -1663050.05841)</td>\n",
+       "      <td>POINT (278840.597 9878582.683)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>POINT (-51162466.75537 -1662856.03660)</td>\n",
+       "      <td>POINT (278943.938 9878602.174)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>POINT (-51162395.70630 -1661212.89092)</td>\n",
+       "      <td>POINT (278918.522 9878743.349)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>POINT (-51162359.78638 -1660311.17425)</td>\n",
+       "      <td>POINT (278904.820 9878820.828)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>POINT (-51161214.33539 -1660281.82433)</td>\n",
+       "      <td>POINT (278812.995 9878820.927)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>POINT (-51160541.28029 -1660405.19585)</td>\n",
+       "      <td>POINT (278760.729 9878808.890)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>POINT (-51159717.92153 -1660731.76823)</td>\n",
+       "      <td>POINT (278698.901 9878779.058)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>POINT (-51161143.49659 -1663050.05841)</td>\n",
+       "      <td>POINT (278840.597 9878582.683)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>POINT (-51161183.85308 -1661162.77451)</td>\n",
+       "      <td>POINT (278821.145 9878745.092)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>POINT (-51162020.32411 -1661125.31401)</td>\n",
+       "      <td>POINT (278887.493 9878750.086)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                        0\n",
-       "0  POINT (-51161143.49659 -1663050.05841)\n",
-       "1  POINT (-51162466.75537 -1662856.03660)\n",
-       "2  POINT (-51162395.70630 -1661212.89092)\n",
-       "3  POINT (-51162359.78638 -1660311.17425)\n",
-       "4  POINT (-51161214.33539 -1660281.82433)\n",
-       "5  POINT (-51160541.28029 -1660405.19585)\n",
-       "6  POINT (-51159717.92153 -1660731.76823)\n",
-       "7  POINT (-51161143.49659 -1663050.05841)\n",
-       "8  POINT (-51161183.85308 -1661162.77451)\n",
-       "9  POINT (-51162020.32411 -1661125.31401)"
+       "                                0\n",
+       "0  POINT (278840.597 9878582.683)\n",
+       "1  POINT (278943.938 9878602.174)\n",
+       "2  POINT (278918.522 9878743.349)\n",
+       "3  POINT (278904.820 9878820.828)\n",
+       "4  POINT (278812.995 9878820.927)\n",
+       "5  POINT (278760.729 9878808.890)\n",
+       "6  POINT (278698.901 9878779.058)\n",
+       "7  POINT (278840.597 9878582.683)\n",
+       "8  POINT (278821.145 9878745.092)\n",
+       "9  POINT (278887.493 9878750.086)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
