--- a/08 Spatial Data Cleaning/Spatial.ipynb
+++ b/08 Spatial Data Cleaning/Spatial.ipynb
@@ -26,320 +26,102 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "gdf_bld = gpd.read_file(path, layer = \"BLDS\")\n",
-    "# gdf.head(10)"
+    "### Read Layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read Layers\n",
+    "gdf_bld = gpd.read_file(path, layer = \"BLDS\")\n",
+    "gdf_rd = gpd.read_file(path, layer = \"Roads\")\n",
+    "gdf_feat = gpd.read_file(path, layer = \"Features\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filter & Clean Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name        255\n",
+       "natural      60\n",
+       "geometry      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Clean Buildings\n",
+    "# ========================================================================\n",
     "gdf2_bld = gdf_bld\n",
     "for col in gdf2_bld.columns:\n",
     "    if gdf2_bld[col].isnull().sum() > 300:\n",
     "        gdf2_bld.drop(col, axis = 1, inplace = True)\n",
     "\n",
     "gdf2_bld.drop(columns = [\"osm_type\",\"full_id\", \"osm_id\"], axis = 1, inplace = True)\n",
+    "# gdf2_bld.isnull().sum()\n",
     "\n",
-    "# gdf2_bld.isnull().sum()"
+    "\n",
+    "# Clean Roads\n",
+    "# ========================================================================\n",
+    "gdf2_rd = gdf_rd\n",
+    "for col in gdf2_rd.columns:\n",
+    "    if gdf2_rd[col].isnull().sum() > 100:\n",
+    "        gdf2_rd.drop(col, axis = 1, inplace = True)\n",
+    "\n",
+    "gdf2_rd.drop(columns = [\"full_id\", \"osm_type\",\"osm_id\"], axis = 1, inplace = True)\n",
+    "gdf2_rd.isnull().sum()\n",
+    "\n",
+    "\n",
+    "# Clean Features\n",
+    "# ========================================================================\n",
+    "gdf2_feat = gdf_feat\n",
+    "gdf2_feat.set_index(\"name\", inplace = True)\n",
+    "for col in gdf2_feat.columns:\n",
+    "    if gdf2_feat[col].isnull().sum() > 200:\n",
+    "        gdf2_feat.drop(col, axis = 1, inplace = True)\n",
+    "\n",
+    "gdf2_feat.drop(columns = [\"full_id\", \"osm_type\",\"osm_id\"], axis = 1, inplace = True)\n",
+    "gdf2_feat.reset_index(inplace = True)\n",
+    "gdf2_feat.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export Layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>building</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hall 6</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01790 -1.09473, 37.01782 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Graduation Square</td>\n",
-       "      <td>None</td>\n",
-       "      <td>MULTIPOLYGON (((37.01481 -1.09672, 37.01561 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>MULTIPOLYGON (((37.01051 -1.09376, 37.01051 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>JKUAT swimming pool</td>\n",
-       "      <td>None</td>\n",
-       "      <td>MULTIPOLYGON (((37.01497 -1.09191, 37.01520 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>changing rooms</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01498 -1.09154, 37.01503 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>JKUAT Dam</td>\n",
-       "      <td>None</td>\n",
-       "      <td>MULTIPOLYGON (((37.01781 -1.09377, 37.01896 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Hall 6 mess</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01736 -1.09466, 37.01766 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Technology House(hall_7)</td>\n",
-       "      <td>commercial</td>\n",
-       "      <td>MULTIPOLYGON (((37.01650 -1.09453, 37.01685 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>studeez</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01618 -1.09429, 37.01643 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>S.C.C</td>\n",
-       "      <td>school</td>\n",
-       "      <td>MULTIPOLYGON (((37.01438 -1.09467, 37.01461 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Computer Building Faculty of Agriculture</td>\n",
-       "      <td>school</td>\n",
-       "      <td>MULTIPOLYGON (((37.01352 -1.09427, 37.01393 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Food Science Building</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01308 -1.09486, 37.01353 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Food Science Building</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01358 -1.09479, 37.01394 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Common Lecture building (C.L.B)</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01390 -1.09528, 37.01423 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>S.H.R.D building(school of human resource Depa...</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01447 -1.09496, 37.01485 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>JKUAT Administration Block A</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01434 -1.09561, 37.01461 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>JKUAT assembly hall</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01488 -1.09538, 37.01519 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Nyayo park</td>\n",
-       "      <td>None</td>\n",
-       "      <td>MULTIPOLYGON (((37.01478 -1.09588, 37.01521 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>JKUAT Admin Block 2</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01424 -1.09649, 37.01447 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Administration Building</td>\n",
-       "      <td>construction</td>\n",
-       "      <td>MULTIPOLYGON (((37.01380 -1.09706, 37.01381 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>E.M.B(Engineering Main Building)</td>\n",
-       "      <td>university</td>\n",
-       "      <td>MULTIPOLYGON (((37.01347 -1.09567, 37.01380 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Soil Lab (Civil Engineering Block)</td>\n",
-       "      <td>university</td>\n",
-       "      <td>MULTIPOLYGON (((37.01302 -1.09567, 37.01317 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Pine Park</td>\n",
-       "      <td>None</td>\n",
-       "      <td>MULTIPOLYGON (((37.01342 -1.09570, 37.01423 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>JKUAT Library</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01502 -1.09672, 37.01502 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>AICAD gym</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01559 -1.09676, 37.01573 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>JKUAT</td>\n",
-       "      <td>None</td>\n",
-       "      <td>MULTIPOLYGON (((37.01590 -1.09606, 37.01617 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>SUM</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01653 -1.09614, 37.01685 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>SUM</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01688 -1.09620, 37.01719 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>None</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01538 -1.09582, 37.01566 -1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Serena Cafeteria</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>MULTIPOLYGON (((37.01525 -1.09545, 37.01525 -1...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 name      building  \\\n",
-       "0                                              Hall 6           yes   \n",
-       "1                                   Graduation Square          None   \n",
-       "2                                                None          None   \n",
-       "3                                 JKUAT swimming pool          None   \n",
-       "4                                      changing rooms           yes   \n",
-       "5                                           JKUAT Dam          None   \n",
-       "6                                         Hall 6 mess           yes   \n",
-       "7                            Technology House(hall_7)    commercial   \n",
-       "8                                             studeez           yes   \n",
-       "9                                               S.C.C        school   \n",
-       "10           Computer Building Faculty of Agriculture        school   \n",
-       "11                              Food Science Building           yes   \n",
-       "12                              Food Science Building           yes   \n",
-       "13                    Common Lecture building (C.L.B)           yes   \n",
-       "14  S.H.R.D building(school of human resource Depa...           yes   \n",
-       "15                       JKUAT Administration Block A           yes   \n",
-       "16                                JKUAT assembly hall           yes   \n",
-       "17                                         Nyayo park          None   \n",
-       "18                                JKUAT Admin Block 2           yes   \n",
-       "19                            Administration Building  construction   \n",
-       "20                   E.M.B(Engineering Main Building)    university   \n",
-       "21                 Soil Lab (Civil Engineering Block)    university   \n",
-       "22                                          Pine Park          None   \n",
-       "23                                      JKUAT Library           yes   \n",
-       "24                                          AICAD gym           yes   \n",
-       "25                                              JKUAT          None   \n",
-       "26                                                SUM           yes   \n",
-       "27                                                SUM           yes   \n",
-       "28                                               None           yes   \n",
-       "29                                   Serena Cafeteria           yes   \n",
-       "\n",
-       "                                             geometry  \n",
-       "0   MULTIPOLYGON (((37.01790 -1.09473, 37.01782 -1...  \n",
-       "1   MULTIPOLYGON (((37.01481 -1.09672, 37.01561 -1...  \n",
-       "2   MULTIPOLYGON (((37.01051 -1.09376, 37.01051 -1...  \n",
-       "3   MULTIPOLYGON (((37.01497 -1.09191, 37.01520 -1...  \n",
-       "4   MULTIPOLYGON (((37.01498 -1.09154, 37.01503 -1...  \n",
-       "5   MULTIPOLYGON (((37.01781 -1.09377, 37.01896 -1...  \n",
-       "6   MULTIPOLYGON (((37.01736 -1.09466, 37.01766 -1...  \n",
-       "7   MULTIPOLYGON (((37.01650 -1.09453, 37.01685 -1...  \n",
-       "8   MULTIPOLYGON (((37.01618 -1.09429, 37.01643 -1...  \n",
-       "9   MULTIPOLYGON (((37.01438 -1.09467, 37.01461 -1...  \n",
-       "10  MULTIPOLYGON (((37.01352 -1.09427, 37.01393 -1...  \n",
-       "11  MULTIPOLYGON (((37.01308 -1.09486, 37.01353 -1...  \n",
-       "12  MULTIPOLYGON (((37.01358 -1.09479, 37.01394 -1...  \n",
-       "13  MULTIPOLYGON (((37.01390 -1.09528, 37.01423 -1...  \n",
-       "14  MULTIPOLYGON (((37.01447 -1.09496, 37.01485 -1...  \n",
-       "15  MULTIPOLYGON (((37.01434 -1.09561, 37.01461 -1...  \n",
-       "16  MULTIPOLYGON (((37.01488 -1.09538, 37.01519 -1...  \n",
-       "17  MULTIPOLYGON (((37.01478 -1.09588, 37.01521 -1...  \n",
-       "18  MULTIPOLYGON (((37.01424 -1.09649, 37.01447 -1...  \n",
-       "19  MULTIPOLYGON (((37.01380 -1.09706, 37.01381 -1...  \n",
-       "20  MULTIPOLYGON (((37.01347 -1.09567, 37.01380 -1...  \n",
-       "21  MULTIPOLYGON (((37.01302 -1.09567, 37.01317 -1...  \n",
-       "22  MULTIPOLYGON (((37.01342 -1.09570, 37.01423 -1...  \n",
-       "23  MULTIPOLYGON (((37.01502 -1.09672, 37.01502 -1...  \n",
-       "24  MULTIPOLYGON (((37.01559 -1.09676, 37.01573 -1...  \n",
-       "25  MULTIPOLYGON (((37.01590 -1.09606, 37.01617 -1...  \n",
-       "26  MULTIPOLYGON (((37.01653 -1.09614, 37.01685 -1...  \n",
-       "27  MULTIPOLYGON (((37.01688 -1.09620, 37.01719 -1...  \n",
-       "28  MULTIPOLYGON (((37.01538 -1.09582, 37.01566 -1...  \n",
-       "29  MULTIPOLYGON (((37.01525 -1.09545, 37.01525 -1...  "
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gdf2_bld.head(30)"
+    "gdf2_bld.to_file(\"Processes/Jkuat_Blds.gpkg\", driver = \"GPKG\")\n",
+    "gdf2_rd.to_file(\"Processes/Jkuat_Roads.gpkg\", griver = \"GPKG\")\n",
+    "gdf2_feat.to_file(\"Processes/Jkuat_Features.gpkg\", driver = \"GPKG\")"
    ]
   }
  ],
